<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/item_rounder"
    android:backgroundTint="@color/dark_gray"
    tools:ignore="TextSizeCheck">

    <TextView
        android:id="@+id/tv_location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_type_of_the_location"
        android:textColor="@color/light_grey"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_location_name"
        app:layout_constraintTop_toBottomOf="@id/tv_location_name"
        app:layout_constraintVertical_bias="0.252" />

    <TextView
        android:id="@+id/tv_location_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_type"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_type"
        app:layout_constraintTop_toBottomOf="@id/tv_type" />

    <TextView
        android:id="@+id/tv_dimension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_dimension_in_which_the_location_is_located"
        android:textColor="@color/light_grey"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_type"
        app:layout_constraintTop_toBottomOf="@id/tv_location_type"
        app:layout_constraintVertical_bias="0.218" />

    <TextView
        android:id="@+id/tv_location_dimension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_s_dimension"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_dimension"
        app:layout_constraintTop_toBottomOf="@id/tv_dimension" />

    <TextView
        android:id="@+id/tv_location_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/_00_00"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>