<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:layout_height="150dp"
    android:backgroundTint="@color/dark_gray"
    android:background="@drawable/item_rounder">

    <ImageView
        android:id="@+id/iv_characters_picture"
        android:layout_width="150dp"
        android:layout_height="match_parent"
android:src="@drawable/rmlogo"
        android:contentDescription="@string/character_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_character_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_characters_picture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_last_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_known_location"
        android:textColor="@color/light_grey"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_character_name"
        app:layout_constraintTop_toBottomOf="@id/tv_character_name"
        app:layout_constraintVertical_bias="0.252" />

    <TextView
        android:id="@+id/tv_character_last_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_s_last_known_location"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_last_loc"
        app:layout_constraintTop_toBottomOf="@id/tv_last_loc" />

    <TextView
        android:id="@+id/tv_first_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_seen_in"
        android:textColor="@color/light_grey"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_last_loc"
        app:layout_constraintTop_toBottomOf="@id/tv_character_last_loc"
        app:layout_constraintVertical_bias="0.218" />

    <TextView
        android:id="@+id/tv_character_first_seen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_first_seen"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/tv_first_seen"
        app:layout_constraintTop_toBottomOf="@id/tv_first_seen" />


</androidx.constraintlayout.widget.ConstraintLayout>